tests(unit): adicionado testes unitarios visando todas as regras de négocio da aplicação