@@ -1,12 +1,13 @@
 package com.desafiopicpay.services;
 
+import com.desafiopicpay.domain.role.Role;
 import com.desafiopicpay.domain.user.User;
 import com.desafiopicpay.domain.user.UserType;
 import com.desafiopicpay.dtos.PaginatedUsersResponseDTO;
 import com.desafiopicpay.dtos.UserRequestDTO;
 import com.desafiopicpay.dtos.UserResponseDTO;
-import com.desafiopicpay.exceptions.InvalidOperationException;
 import com.desafiopicpay.mappers.UserMapper;
+import com.desafiopicpay.repositories.RoleRepository;
 import com.desafiopicpay.repositories.UserRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.NonNull;
@@ -20,6 +21,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.math.BigDecimal;
 import java.util.Collections;
@@ -28,6 +30,7 @@ import java.util.Optional;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -37,88 +40,194 @@ class UserServiceTest {
     private UserRepository userRepository;
 
     @Mock
+    private RoleRepository roleRepository;
+
+    @Mock
     private UserMapper userMapper;
+
+    @Mock
+    private BCryptPasswordEncoder passwordEncoder;
 
     @InjectMocks
     private UserService userService;
 
     @Test
-    @DisplayName("Should validate transaction successfully when user is COMMON and has balance")
-    void validateTransactionSuccess() {
-        User sender = new User(1L, "John", "Doe", "12345678900", "john@test.com", "123456", new BigDecimal("100.00"), UserType.COMMON, Collections.emptySet());
-        assertDoesNotThrow(() -> userService.validateTransaction(sender, new BigDecimal("50.00")));
-    }
+    @DisplayName("Should create user successfully when all data is valid")
+    void createUser_Success() {
+        // Arrange
+        UserRequestDTO requestDTO = new UserRequestDTO("John", "Doe", "12345678900", new BigDecimal("100.00"), "john@test.com", "password", UserType.COMMON, null);
+        User userEntity = new User();
+        userEntity.setPassword("password");
+        userEntity.setRoles(Set.of(new Role(1L, "BASIC")));
+        
+        User savedUser = new User();
+        savedUser.setId(1L);
+        savedUser.setPassword("encodedPassword");
 
-    @Test
-    @DisplayName("Should throw exception when user is MERCHANT")
-    void validateTransactionMerchantFail() {
-        User sender = new User(1L, "John", "Doe", "12345678900", "john@test.com", "123456", new BigDecimal("100.00"), UserType.MERCHANT, Collections.emptySet());
-        assertThrows(InvalidOperationException.class, () -> userService.validateTransaction(sender, new BigDecimal("50.00")));
-    }
+        UserResponseDTO responseDTO = new UserResponseDTO(1L, "John", "Doe", "12345678900", "john@test.com", new BigDecimal("100.00"), UserType.COMMON, null);
 
-    @Test
-    @DisplayName("Should throw exception when balance is insufficient")
-    void validateTransactionBalanceFail() {
-        User sender = new User(1L, "John", "Doe", "12345678900", "john@test.com", "123456", new BigDecimal("10.00"), UserType.COMMON, Collections.emptySet());
-        assertThrows(InvalidOperationException.class, () -> userService.validateTransaction(sender, new BigDecimal("50.00")));
-    }
+        when(userMapper.toUserEntity(requestDTO)).thenReturn(userEntity);
+        when(passwordEncoder.encode("password")).thenReturn("encodedPassword");
+        when(roleRepository.findById(1L)).thenReturn(Optional.of(new Role(1L, "BASIC")));
+        when(userRepository.save(any(User.class))).thenReturn(savedUser);
+        when(userMapper.toUserResponseDTO(any(User.class))).thenReturn(responseDTO);
 
-    @Test
-    @DisplayName("Should create user successfully")
-    void createUserSuccess() {
-        UserRequestDTO request = new UserRequestDTO("John", "Doe", "12345678900", new BigDecimal("100"), "test@test.com", "123", UserType.COMMON, Collections.emptySet());
-        User user = new User(1L, "John", "Doe", "12345678900", "test@test.com", "123", new BigDecimal("100"), UserType.COMMON, Collections.emptySet());
-        UserResponseDTO responseDTO = new UserResponseDTO(1L, "John", "Doe", "12345678900", "test@test.com", new BigDecimal("100"), UserType.COMMON, Collections.emptySet());
+        // Act
+        UserResponseDTO result = userService.createUser(requestDTO);
 
-        when(userMapper.toUserEntity(request)).thenReturn(user);
-        when(userRepository.save(user)).thenReturn(user);
-        when(userMapper.toUserResponseDTO(user)).thenReturn(responseDTO);
-
-        UserResponseDTO result = userService.createUser(request);
-
+        // Assert
         assertNotNull(result);
-        assertEquals(responseDTO, result);
-        verify(userRepository, times(1)).save(user);
+        assertEquals(responseDTO.firstName(), result.firstName());
+        verify(userRepository, times(1)).save(any(User.class));
+        verify(passwordEncoder, times(1)).encode("password");
+    }
+
+    @Test
+    @DisplayName("Should throw EntityNotFoundException when Role does not exist")
+    void createUser_RoleNotFound() {
+        // Arrange
+        UserRequestDTO requestDTO = new UserRequestDTO("John", "Doe", "12345678900", new BigDecimal("100.00"), "john@test.com", "password",UserType.COMMON, null);
+        User userEntity = new User();
+        userEntity.setPassword("password");
+        Role invalidRole = new Role();
+        invalidRole.setId(99L);
+        userEntity.setRoles(Set.of(invalidRole));
+
+        when(userMapper.toUserEntity(requestDTO)).thenReturn(userEntity);
+        when(passwordEncoder.encode("password")).thenReturn("encodedPassword");
+        when(roleRepository.findById(99L)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThrows(EntityNotFoundException.class, () -> userService.createUser(requestDTO));
+        verify(userRepository, never()).save(any());
     }
 
     @Test
     @DisplayName("Should find user by ID successfully")
-    void findUserByIdSuccess() {
-        User user = new User(1L, "John", "Doe", "12345678900", "test@test.com", "123", new BigDecimal("100"), UserType.COMMON, Collections.emptySet());
-        UserResponseDTO responseDTO = new UserResponseDTO(1L, "John", "Doe", "12345678900", "test@test.com", new BigDecimal("100"), UserType.COMMON, Collections.emptySet());
+    void findUserById_Success() {
+        // Arrange
+        Long id = 1L;
+        User user = new User();
+        user.setId(id);
+        UserResponseDTO responseDTO = new UserResponseDTO(id, "John", "Doe", "12345678900", "john@test.com", BigDecimal.ZERO, UserType.COMMON, null);
 
-        when(userRepository.findUserById(1L)).thenReturn(Optional.of(user));
+        when(userRepository.findUserById(id)).thenReturn(Optional.of(user));
         when(userMapper.toUserResponseDTO(user)).thenReturn(responseDTO);
 
-        UserResponseDTO result = userService.findUserById(1L);
+        // Act
+        UserResponseDTO result = userService.findUserById(id);
 
+        // Assert
         assertNotNull(result);
-        assertEquals(responseDTO, result);
+        assertEquals(id, result.id());
     }
 
     @Test
-    @DisplayName("Should throw exception when user not found by ID")
-    void findUserByIdNotFound() {
-        when(userRepository.findUserById(1L)).thenReturn(Optional.empty());
-        assertThrows(EntityNotFoundException.class, () -> userService.findUserById(1L));
+    @DisplayName("Should throw EntityNotFoundException when user ID not found")
+    void findUserById_NotFound() {
+        // Arrange
+        Long id = 1L;
+        when(userRepository.findUserById(id)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThrows(EntityNotFoundException.class, () -> userService.findUserById(id));
+    }
+
+    @Test
+    @DisplayName("Should find user by Document successfully")
+    void findUserByDocument_Success() {
+        // Arrange
+        String doc = "12345678900";
+        User user = new User();
+        UserResponseDTO responseDTO = new UserResponseDTO(1L, "John", "Doe", doc, "john@test.com", BigDecimal.ZERO, UserType.COMMON, null);
+
+        when(userRepository.findUserByDocument(doc)).thenReturn(Optional.of(user));
+        when(userMapper.toUserResponseDTO(user)).thenReturn(responseDTO);
+
+        // Act
+        UserResponseDTO result = userService.findUserByDocument(doc);
+
+        // Assert
+        assertEquals(doc, result.document());
+    }
+
+    @Test
+    @DisplayName("Should throw EntityNotFoundException when Document not found")
+    void findUserByDocument_NotFound() {
+        // Arrange
+        String doc = "12345678900";
+        when(userRepository.findUserByDocument(doc)).thenReturn(Optional.empty());
+
+        // Act & Assert
+        assertThrows(EntityNotFoundException.class, () -> userService.findUserByDocument(doc));
+    }
+
+    @Test
+    @DisplayName("Should find all users paginated successfully")
+    void findAllUsersPaginated_Success() {
+        // Arrange
+        Pageable pageable = PageRequest.of(0, 10);
+        User user = new User();
+        Page<@NonNull User> page = new PageImpl<>(List.of(user));
+        PaginatedUsersResponseDTO responseDTO = new PaginatedUsersResponseDTO(List.of(new UserResponseDTO(1L, "John", "Doe", "doc", "email", BigDecimal.ZERO, UserType.COMMON, null)), 0, 1, 1, 1);
+
+        when(userRepository.findAll(pageable)).thenReturn(page);
+        when(userMapper.toPaginatedResponseDTO(page)).thenReturn(responseDTO);
+
+        // Act
+        PaginatedUsersResponseDTO result = userService.findAllUsersPaginated(pageable);
+
+        // Assert
+        assertNotNull(result);
+        assertFalse(result.data().isEmpty());
+    }
+
+    @Test
+    @DisplayName("Should throw EntityNotFoundException when no users found")
+    void findAllUsersPaginated_Empty() {
+        // Arrange
+        Pageable pageable = PageRequest.of(0, 10);
+        Page<@NonNull User> emptyPage = new PageImpl<>(Collections.emptyList());
+
+        when(userRepository.findAll(pageable)).thenReturn(emptyPage);
+
+        // Act & Assert
+        assertThrows(EntityNotFoundException.class, () -> userService.findAllUsersPaginated(pageable));
+    }
+
+    @Test
+    @DisplayName("Should update user successfully")
+    void updateUser_Success() {
+        // Arrange
+        Long id = 1L;
+        UserRequestDTO requestDTO = new UserRequestDTO("Jane", "Doe", "12345678900", BigDecimal.ZERO, "jane@test.com", "password", UserType.COMMON,  null);
+        User existingUser = new User();
+        existingUser.setId(id);
+        
+        UserResponseDTO responseDTO = new UserResponseDTO(id, "Jane", "Doe", "12345678900", "jane@test.com", BigDecimal.ZERO, UserType.COMMON, null);
+
+        when(userRepository.findUserById(id)).thenReturn(Optional.of(existingUser));
+        when(userMapper.toUserResponseDTO(existingUser)).thenReturn(responseDTO);
+
+        // Act
+        UserResponseDTO result = userService.updateUser(id, requestDTO);
+
+        // Assert
+        assertEquals("Jane", result.firstName());
+        verify(userMapper).updateUserFromDTO(requestDTO, existingUser);
     }
     
     @Test
-    @DisplayName("Should return paginated users successfully")
-    void findAllUsersPaginatedSuccess() {
-        User user = new User(1L, "John", "Doe", "12345678900", "test@test.com", "123", new BigDecimal("100"), UserType.COMMON, Collections.emptySet());
-        Page<@NonNull User> page = new PageImpl<>(List.of(user));
-        UserResponseDTO responseDTO = new UserResponseDTO(1L, "John", "Doe", "12345678900", "test@test.com", new BigDecimal("100"), UserType.COMMON, Collections.emptySet());
-        PaginatedUsersResponseDTO paginatedResponse = new PaginatedUsersResponseDTO(List.of(responseDTO), 0, 10, 1, 1);
-        Pageable pageable = PageRequest.of(0, 10);
+    @DisplayName("Should delete user successfully")
+    void deleteUserById_Success() {
+        // Arrange
+        Long id = 1L;
+        when(userRepository.existsById(id)).thenReturn(true);
 
-        when(userRepository.findAll(pageable)).thenReturn(page);
-        when(userMapper.toPaginatedResponseDTO(page)).thenReturn(paginatedResponse);
+        // Act
+        userService.deleteUserById(id);
 
-        PaginatedUsersResponseDTO result = userService.findAllUsersPaginated(pageable);
-
-        assertNotNull(result);
-        assertEquals(1, result.data().size());
-        assertEquals(responseDTO, result.data().getFirst());
+        // Assert
+        verify(userRepository, times(1)).deleteById(id);
     }
 }
